# logster

./: .env.sample  Cargo.toml  README.md
src/: main.rs
