[package]
name = "logster"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
aws-sdk-cloudwatchlogs = "1.74"
tokio = { version = "1.44", features = ["full"] }
ripgrep="14.1.1"
dotenv="0.15.0"

[dev-dependencies]
clippy = "0.0.302" # Or the latest version you prefer
